v1.0.0/modules/schema/pages/class/ResourcePerformanceEvaluation.adoc
= `ResourcePerformanceEvaluation`
:toclevels: 4


+++Represents an the performance evaluation of a resource deployment. Every resource deployment may have many performance evaluations, using different evaluation metrics or algorithms, or produced by different evaluation authorities.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:ResourcePerformanceEvaluation`


| CIM standard (perspective)
| IEC62325 (Market)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`ResourcePerformanceEvaluation`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
ResourcePerformanceEvaluation {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



ResourcePerformanceTimeSeriesFactor {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



DistributedResourceActualEvent {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



ResourcePerformanceGlobalFactor {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




ResourcePerformanceEvaluation -> ResourcePerformanceTimeSeriesFactor: ResourcePerformanceTimeSeriesFactors


ResourcePerformanceEvaluation -> DistributedResourceActualEvent: DemandResponseActualEvent


ResourcePerformanceEvaluation -> ResourcePerformanceGlobalFactor: ResorcePerformanceGlobalFactor


ResourcePerformanceEvaluation -> DiagramObject: DiagramObjects


ResourcePerformanceEvaluation -> InstanceSet: InstanceSet


ResourcePerformanceEvaluation -> Name: Names


ResourcePerformanceEvaluation -> ChangeSetMember: PropertiesCIMDataObject


ResourcePerformanceEvaluation -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<DemandResponseActualEvent,`DemandResponseActualEvent`>>
| 1
| xref::class/DistributedResourceActualEvent.adoc[`DistributedResourceActualEvent`]
| n/a

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<effectiveEndTime,`effectiveEndTime`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| n/a

| <<effectiveStartTime,`effectiveStartTime`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| n/a

| <<evaluationDescription,`evaluationDescription`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Description of the performance evaluation, e.g. the rating classification used (any is allowed), why the evaluation was performed, anything that describes the demand response performance evaluation.+++

| <<evaluationValue,`evaluationValue`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The value of the performance. as a String, any rating scheme is supported (e.g. "1","2","3" or "low", "medium", "high"). The rating scheme is described in the performanceValueDescription attribute.+++

| <<ResorcePerformanceGlobalFactor,`ResorcePerformanceGlobalFactor`>>
| 0..*
| xref::class/ResourcePerformanceGlobalFactor.adoc[`ResourcePerformanceGlobalFactor`]
| n/a

| <<ResourcePerformanceTimeSeriesFactors,`ResourcePerformanceTimeSeriesFactors`>>
| 0..*
| xref::class/ResourcePerformanceTimeSeriesFactor.adoc[`ResourcePerformanceTimeSeriesFactor`]
| n/a

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DemandResponseActualEvent]
=== `DemandResponseActualEvent`


[cols="h,4",width=65%]
|===
| URI
| `cim:ResourcePerformanceEvaluation.DemandResponseActualEvent`
| Cardinality
| 1
| Type
| xref::class/DistributedResourceActualEvent.adoc[`DistributedResourceActualEvent`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#effectiveEndTime]
=== `effectiveEndTime`


[cols="h,4",width=65%]
|===
| URI
| `cim:ResourcePerformanceEvaluation.effectiveEndTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

//[discrete]
[#effectiveStartTime]
=== `effectiveStartTime`


[cols="h,4",width=65%]
|===
| URI
| `cim:ResourcePerformanceEvaluation.effectiveStartTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

//[discrete]
[#evaluationDescription]
=== `evaluationDescription`
+++Description of the performance evaluation, e.g. the rating classification used (any is allowed), why the evaluation was performed, anything that describes the demand response performance evaluation.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ResourcePerformanceEvaluation.evaluationDescription`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#evaluationValue]
=== `evaluationValue`
+++The value of the performance. as a String, any rating scheme is supported (e.g. "1","2","3" or "low", "medium", "high"). The rating scheme is described in the performanceValueDescription attribute.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ResourcePerformanceEvaluation.evaluationValue`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#ResorcePerformanceGlobalFactor]
=== `ResorcePerformanceGlobalFactor`


[cols="h,4",width=65%]
|===
| URI
| `cim:ResourcePerformanceEvaluation.ResorcePerformanceGlobalFactor`
| Cardinality
| 0..*
| Type
| xref::class/ResourcePerformanceGlobalFactor.adoc[`ResourcePerformanceGlobalFactor`]


|===

//[discrete]
[#ResourcePerformanceTimeSeriesFactors]
=== `ResourcePerformanceTimeSeriesFactors`


[cols="h,4",width=65%]
|===
| URI
| `cim:ResourcePerformanceEvaluation.ResourcePerformanceTimeSeriesFactors`
| Cardinality
| 0..*
| Type
| xref::class/ResourcePerformanceTimeSeriesFactor.adoc[`ResourcePerformanceTimeSeriesFactor`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===


