v1.1.0/modules/schema/pages/class/ResourcePerformanceEvaluation.adoc
= `ResourcePerformanceEvaluation`
:toclevels: 4


+++Represents an the performance evaluation of a resource deployment. Every resource deployment may have many performance evaluations, using different evaluation metrics or algorithms, or produced by different evaluation authorities.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:ResourcePerformanceEvaluation`


| CIM standard (perspective)
| IEC62325 (Market)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`ResourcePerformanceEvaluation`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<DemandResponseActualEvent,`DemandResponseActualEvent`>>
//| [[slots_table.DemandResponseActualEvent]]<<DemandResponseActualEvent,`DemandResponseActualEvent`>>
| 1 +
xref::class/DistributedResourceActualEvent.adoc[`DistributedResourceActualEvent`]
| _n/a_
| _n/a_

| <<ResorcePerformanceGlobalFactor,`ResorcePerformanceGlobalFactor`>>
//| [[slots_table.ResorcePerformanceGlobalFactor]]<<ResorcePerformanceGlobalFactor,`ResorcePerformanceGlobalFactor`>>
| 0..* +
xref::class/ResourcePerformanceGlobalFactor.adoc[`ResourcePerformanceGlobalFactor`]
| _n/a_
| _n/a_

| <<ResourcePerformanceTimeSeriesFactors,`ResourcePerformanceTimeSeriesFactors`>>
//| [[slots_table.ResourcePerformanceTimeSeriesFactors]]<<ResourcePerformanceTimeSeriesFactors,`ResourcePerformanceTimeSeriesFactors`>>
| 0..* +
xref::class/ResourcePerformanceTimeSeriesFactor.adoc[`ResourcePerformanceTimeSeriesFactor`]
| _n/a_
| _n/a_

| <<effectiveEndTime,`effectiveEndTime`>>
//| [[slots_table.effectiveEndTime]]<<effectiveEndTime,`effectiveEndTime`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| _n/a_
| _n/a_

| <<effectiveStartTime,`effectiveStartTime`>>
//| [[slots_table.effectiveStartTime]]<<effectiveStartTime,`effectiveStartTime`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| _n/a_
| _n/a_

| <<evaluationDescription,`evaluationDescription`>>
//| [[slots_table.evaluationDescription]]<<evaluationDescription,`evaluationDescription`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Description of the performance evaluation, e.g. the rating classification used (any is allowed), why the evaluation was...+++
| _n/a_

| <<evaluationValue,`evaluationValue`>>
//| [[slots_table.evaluationValue]]<<evaluationValue,`evaluationValue`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The value of the performance. as a String, any rating scheme is supported (e.g. "1","2","3" or "low", "medium", "high"). The...+++
| _n/a_

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#DemandResponseActualEvent]
=== `DemandResponseActualEvent`



[cols="h,4",width=65%]
|===
| URI
| `cim:ResourcePerformanceEvaluation.DemandResponseActualEvent`
| Cardinality
| 1
| Type
| xref::class/DistributedResourceActualEvent.adoc[`DistributedResourceActualEvent`]


|===

////
[.text-left]
--
<<slots_table.DemandResponseActualEvent,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#effectiveEndTime]
=== `effectiveEndTime`



[cols="h,4",width=65%]
|===
| URI
| `cim:ResourcePerformanceEvaluation.effectiveEndTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

////
[.text-left]
--
<<slots_table.effectiveEndTime,&#10548;>>
--
////


//[discrete]
[#effectiveStartTime]
=== `effectiveStartTime`



[cols="h,4",width=65%]
|===
| URI
| `cim:ResourcePerformanceEvaluation.effectiveStartTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

////
[.text-left]
--
<<slots_table.effectiveStartTime,&#10548;>>
--
////


//[discrete]
[#evaluationDescription]
=== `evaluationDescription`
+++Description of the performance evaluation, e.g. the rating classification used (any is allowed), why the evaluation was performed, anything that describes the demand response performance evaluation.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ResourcePerformanceEvaluation.evaluationDescription`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.evaluationDescription,&#10548;>>
--
////


//[discrete]
[#evaluationValue]
=== `evaluationValue`
+++The value of the performance. as a String, any rating scheme is supported (e.g. "1","2","3" or "low", "medium", "high"). The rating scheme is described in the performanceValueDescription attribute.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ResourcePerformanceEvaluation.evaluationValue`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.evaluationValue,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#ResorcePerformanceGlobalFactor]
=== `ResorcePerformanceGlobalFactor`



[cols="h,4",width=65%]
|===
| URI
| `cim:ResourcePerformanceEvaluation.ResorcePerformanceGlobalFactor`
| Cardinality
| 0..*
| Type
| xref::class/ResourcePerformanceGlobalFactor.adoc[`ResourcePerformanceGlobalFactor`]


|===

////
[.text-left]
--
<<slots_table.ResorcePerformanceGlobalFactor,&#10548;>>
--
////


//[discrete]
[#ResourcePerformanceTimeSeriesFactors]
=== `ResourcePerformanceTimeSeriesFactors`



[cols="h,4",width=65%]
|===
| URI
| `cim:ResourcePerformanceEvaluation.ResourcePerformanceTimeSeriesFactors`
| Cardinality
| 0..*
| Type
| xref::class/ResourcePerformanceTimeSeriesFactor.adoc[`ResourcePerformanceTimeSeriesFactor`]


|===

////
[.text-left]
--
<<slots_table.ResourcePerformanceTimeSeriesFactors,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/DistributedResourceActualEvent.adoc[`DistributedResourceActualEvent`] | xref::class/DistributedResourceActualEvent.adoc#ResourcePerformanceEvaluations[`ResourcePerformanceEvaluations`]



| xref::class/ResourcePerformanceGlobalFactor.adoc[`ResourcePerformanceGlobalFactor`] | xref::class/ResourcePerformanceGlobalFactor.adoc#ResourcePerformanceEvaluation[`ResourcePerformanceEvaluation`]



| xref::class/ResourcePerformanceTimeSeriesFactor.adoc[`ResourcePerformanceTimeSeriesFactor`] | xref::class/ResourcePerformanceTimeSeriesFactor.adoc#ResourcePerformanceEvaluation[`ResourcePerformanceEvaluation`]


|===

